--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,19 +18,12 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
 
-      - name: Step 1 - Log the pre-build disc space
-        run: ls
-        
-      - name: step 2 - Checkout the main GitHub branch
-        uses: actions/checkout@v2 
-        
-      - name: Step 3 - Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with: 
-          java-version: 1.8
+      - uses: actions/checkout@v2
 
-      - name: Step 4 - Build your your Jakarta web app with Maven
-        run: echo mvn -B package --file pom.xml
-          
-      - name: Step 5 - List Ubuntu Environment Variables
-        run: env
+      - name: Run a one-line script
+        run: sh ./run.sh
+
+      - name: Run ls command
+        run: |
+          echo Here is what is in the folder
+          ls -a
