Run equality script in gh actions

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -27,3 +27,8 @@ jobs:
         run: |
           echo Here is what is in the folder
           ls -a
+
+      - name: Run equality check
+        run: |
+          echo Running equality check on header file
+          sh ./equality.sh
